syntax = "proto3";

package inventory;
option go_package = "./proto";

service InventoryService {
    rpc CheckStock(StockRequest) returns (StockResponse) {}
}

message StockRequest {
    string product_id = 1;
}

message StockResponse {
    string product_id = 1;
    int32 quantity = 2;
    bool in_stock = 3;
}